--- a/styles/dark.css
+++ b/styles/dark.css
@@ -9,8 +9,26 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+  --font-family: 'IBM Plex mono', sans-serif;
+  --font-weight-bold: 700;
+  --font-weight-regular: 400;
+  --bg-image: url(../images/cover-image-dark.png);
+  --bg-color: #000028;
+  --accent-color: #ff0070;
+  --content-font-size: 18px;
+  --content-text-color: #F1B2CE;
+  --title-text-color: #000028;
+  --line-height: 23.4px;
+  --margin-padding: 10px;
+  --color-header-footer: #db00ff;
 }
 
 .theme-dark .page {
   /* Вам также нужно будет написать ряд подобных селекторов */
+}
+
+@media (width >= 750px) {
+  :root.theme-dark {
+    --margin-padding: 20px;
+  }
 }
