--- a/styles/globals.css
+++ b/styles/globals.css
@@ -20,6 +20,8 @@ h5,
 h6,
 p {
   margin: 0;
+  margin-block-start: 0;
+  margin-block-end: 0;
 }
 
 ul {
@@ -39,4 +41,5 @@ a {
   font-family: inherit;
   font-size: inherit;
   line-height: inherit;
+  padding-inline: initial
 }
