--- a/styles/light.css
+++ b/styles/light.css
@@ -9,8 +9,77 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
-}
+    --font-family: 'IBM Plex mono', sans-serif;
+    --font-weight-bold: 700;
+    --font-weight-regular: 400;
+    --bg-image: url(../images/cover-image-light.png);
+    --bg-color: #F1B2CE;
+    --accent-color: #ff8dcb;
+    --content-font-size: 18px;
+    --content-text-color: #353430;
+    --title-text-color: #353430;
+    --line-height: 23.4px;
+    --margin-padding: 10px;
+    --color-header-footer: #ffc2e6;
+  }
+
 
 .theme-light .page {
   /* Вам также нужно будет написать ряд подобных селекторов */
+}
+
+@media (prefers-color-scheme: light) {
+  :root {
+    --font-family: 'IBM Plex mono', sans-serif;
+    --font-weight-bold: 700;
+    --font-weight-regular: 400;
+    --bg-image: url(../images/cover-image-light.png);
+    --bg-color: #F1B2CE;
+    --accent-color: #ff8dcb;
+    --content-font-size: 18px;
+    --content-text-color: #353430;
+    --title-text-color: #353430;
+    --line-height: 23.4px;
+    --margin-padding: 10px;
+    --color-header-footer: #ffc2e6;
+  }
+}
+
+.theme-light .header__theme-menu-button,
+.theme-light .content__section-title,
+.theme-light .decor-border-top::after,
+.theme-light .decor-border-bottom::before {
+  color: var(--accent-color);
+  --accent-color: #353430;
+ }
+
+ .theme-light .accent-theme-dark,
+ .theme-light .accent-theme-dark::after {
+  display: none;
+ }
+
+ .theme-light .header__theme-menu-button:hover {
+  outline: none;
+  border: 1px solid rgba(50, 49, 45, 0.4);
+}
+
+.header__theme-menu-button:focus-visible {
+  outline: none;
+  border-bottom: 1px solid var(--accent-color);
+  --accent-color: #353430;
+}
+
+.theme-light a:hover {
+  outline: none;
+  border-bottom: 1px solid #353430;
+}
+
+a:focus {
+  outline: none;
+  border: 1px solid #353430;
+}
+
+.theme-light .header__theme-menu-item:has(.header__theme-menu-button_active) {
+  border: 1px solid var(--accent-color);  
+  --accent-color: #353430;
 }
