--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,390 @@
 /* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */
+.header {
+  height: 100vh;
+  min-height: 668px;
+  display: grid;
+  grid-template-rows: 1fr min-content 1fr;
+  grid-template-columns: 1fr;
+  padding: var(--margin-padding);
+}
+
+.accent-theme-dark {
+  position: absolute;
+  top: 10px;
+  right: 19px;
+  color: var(--accent-color);
+  display: flex;
+  gap: 10px;
+}
+
+.accent-theme-dark::after {
+  content: '';
+  display: block;
+  width: 9px;
+  height: 9px;
+  border-radius: 50%;
+  filter: blur(1px);
+  background-color: var(--accent-color);
+  align-self: center;
+}
+
+.decor-border-top::after {
+  content: '';
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  width: 25px;
+  height: 25px;
+  border-top: 1px solid var(--accent-color);
+  border-right: 1px solid var(--accent-color);
+}
+
+.decor-border-bottom::before {
+  content: '';
+  position: absolute;
+  bottom: 10px;
+  left: 10px;
+  width: 25px;
+  height: 25px;
+  border-bottom: 1px solid var(--accent-color);
+  border-left: 1px solid var(--accent-color);
+  align-self: flex-end;
+}
+
+.header__theme-menu {
+  grid-row: 1;
+  justify-self: end;
+  align-self: center;
+}
+
+.header__theme-menu-list {
+  display: flex;
+  flex-direction: column;
+  gap: 14px;
+}
+
+.header__theme-menu-button {
+  color: var(--accent-color);
+  border: none;
+  background-color: transparent;
+  font-family: var(--font-family);
+  text-transform: lowercase;
+  font-size: var(--content-font-size);
+  line-height: 18px;
+  padding-inline: 13px;
+}
+
+.header__theme-menu-button:hover {
+  outline: none;
+  border: 1px solid rgba(255, 0, 112, 0.4);
+}
+
+.header__theme-menu-button:focus-visible {
+  outline: none;
+  border-bottom: 1px solid var(--accent-color);
+}
+
+.header__theme-menu-item:has(.header__theme-menu-button_active) {
+  border: 1px solid var(--accent-color);  
+}
+
+.header__title {
+  grid-row: 2;
+  font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  font-weight: var(--font-weight-bold);
+  line-height: 83%;
+  color: var(--color-header-footer);
+  text-shadow: 4px 4px 0 var(--accent-color);
+}
+
+.text-decor {
+  grid-row: 3;
+  font-size: var(--content-font-size);
+  font-weight: var(--font-weight-bold);
+  background-color: var(--accent-color);
+  height: min-content;
+  line-height: var(--line-height);
+  align-self: center;
+  color: var(--title-text-color);
+}
+
+.content__section-why,
+.content__section-what,
+.content__section-how,
+.gallery {
+  display: grid;
+  grid-template-columns: 1fr;
+  margin-inline: var(--margin-padding);
+}
+
+.content__section-title {
+  font-family: var(--font-family);
+  font-size: var(--content-font-size);
+  font-weight: var(--font-weight-bold);
+  color: var(--accent-color);
+  line-height: var(--line-height);
+  padding-block-end: 20px;
+}
+
+.content__text-title {
+  font-family: var(--font-family);
+  font-size: var(--content-font-size);
+  font-weight: var(--font-weight-bold);
+  background-color: var(--accent-color);
+  line-height: var(--line-height);
+  color: var(--title-text-color);
+}
+
+.content__text-accent {
+  background-color: var(--accent-color);
+  font-weight: var(--font-weight-regular);
+  color: var(--title-text-color);
+  font-size: var(--content-font-size);
+}
+
+.content__text {
+  font-family: var(--font-family);
+  font-size: var(--content-font-size);
+  font-weight: var(--font-weight-regular);
+  line-height: var(--line-height);
+  color: var(--content-text-color);
+  padding-block-start: 10px;
+  padding-block-end: 20px;
+}
+
+.content__text-title + .content__text-accent {
+  margin-block-start: 20px;
+}
+
+a {
+  text-decoration: none;
+  text-shadow: 1px 1px 0 var(--accent-color);
+}
+
+a:hover {
+  outline: none;
+  border-bottom: 1px solid #f1b2ce;
+}
+
+a:focus {
+  outline: none;
+  border: 1px solid #f1b2ce;
+}
+
+.content__section-why {
+  padding-block-start: 40px;
+} 
+
+.content__section-what,
+.content__section-how {
+  padding-block-start: 30px;
+}
+
+.gallery {
+  margin-block-start: 30px;
+  padding-block-end: 40px;
+  gap: 10px;
+}
+
+.image {
+  width: calc(100vw - var(--margin-padding) * 2);
+}
+
+.footer {
+  position: relative;
+  display: flex;
+  height: 100vh;
+  min-height: 668px;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer__title {
+  font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  color: var(--color-header-footer);
+  justify-self: center;
+  align-self: center;
+  text-shadow: 2px 2px 0 var(--accent-color);
+  margin: var(--margin-padding);
+}
 
 .page {
   /* сохраните в разметке и стилях класс page у тега body. Он удобен, чтобы составлять селекторы для разных цветовых тем. */
+  font-family: var(--font-family);
+  background-color: var(--bg-color);
+  background-image: var(--bg-image);
+  background-position: center;
+  background-attachment: fixed;
+  background-size: cover;
+}
+
+@media (width >= 750px) {
+  .header {
+    grid-template-columns: 1fr 1fr;
+    min-height: 1024px;
+    padding: var(--margin-padding);
+  }
+  
+  .accent-theme-dark {
+    top: 20px;
+    right: 28px;
+  }
+  
+  .decor-border-top::after {
+    top: 20px;
+    right: 20px;
+  }
+  
+  .decor-border-bottom::before {
+    bottom: 20px;
+    left: 20px;
+  }
+
+  .header__theme-menu {
+    grid-column: 2;
+  }
+
+  .header__title {
+    display: flex;
+    grid-column-start: 1;
+    grid-column-end: 3;
+    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+    margin-inline-start: -20px;
+   }
+
+  .text-decor {
+    grid-column: 2;
+  }
+
+  .content__section-why {
+    grid-template-columns: 1fr 2fr;
+    column-gap: 20px;
+    padding-block-start: 60px;
+  }
+
+  .content__section-why .content__section-title {
+    grid-row-start: 1;
+    grid-row-end:  5;
+  }
+
+  .content__section-what,
+  .content__section-how {
+  padding-block-start: 60px;
+}
+
+  .content__section-what .content__section-title {
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+  }
+
+  .content__section-how {
+    grid-template-columns: 1fr 2fr;
+    column-gap: 20px;
+  }
+
+  .content__section-how .content__section-title {
+    grid-row-start: 1;
+    grid-row-end: 12;
+    column-gap: 20px;
+  }
+
+  .gallery {
+    display: grid;
+    grid-template-columns: repeat(3, auto);
+    grid-template-rows: repeat(4, auto);
+    grid-auto-flow: dense;
+    gap: 20px;
+    padding-block-start: 30px;
+    padding-block-end: 60px;
+  }
+
+  .gallery .content__text-title {
+    grid-row: 1;
+    grid-column-start: 1;
+    grid-column-end: 4;
+  }
+
+  .image__sunset {
+    grid-row: 2;
+    grid-column-start: 1;
+    grid-column-end: 3;
+  }
+
+  .image__tape {
+    grid-column: 1;
+    grid-row-start: 3;
+    grid-row-end: 5;
+  }
+
+  .image__ice-creame {
+    grid-column: 3;
+    grid-row-start: 2;
+    grid-row-end: 4;
+  }
+
+  .image__book {
+    grid-column: 2;
+    grid-row: 3;
+  }
+
+  .image__street {
+    grid-row: 4;
+    grid-column-start: 2;
+    grid-column-end: 4;
+  }
+
+  .image {
+    object-fit: cover;
+    max-height: 100%;
+    height: 100%;
+    width: 100%;
+  }
+
+  .footer {
+    min-height: 768px;
+  }
+
+  .footer__title {
+    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  }
+}
+
+@media (width >= 1000px) {
+  .header {
+    padding: var(--margin-padding);
+    min-height: 768px;
+  }
+
+  .header__theme-menu {
+    grid-column-start: 1;
+    grid-column-end: 4;
+    justify-self: center;
+    align-self: flex-start;
+  }
+
+  .header__theme-menu-list {
+    flex-direction: row;
+    gap: 10px;
+  }
+
+  .content__section-why {
+    column-gap: 20px;
+    font-size: var(--content-font-size);
+  }
+
+  .content__section-what {
+    grid-template-columns: repeat(3, 1fr);
+    column-gap: 20px;
+  }
+
+  .content__section-what .content__section-title {
+    grid-row: 1;
+    grid-column-start: 1;
+    grid-column-end: 4;
+  }
+
+  .content__section-what .content__text-title {
+    grid-row: 2;
+    word-break: normal;
+  }
 }
