--- a/styles/dark.css
+++ b/styles/dark.css
@@ -14,7 +14,8 @@
   --font-weight-regular: 400;
   --bg-image: url(../images/cover-image-dark.png);
   --bg-color: #000028;
-  --accent-color: #ff0070;
+  --accent-text-color: #ff0070;
+  --accent-bg-color: #ff0070;
   --content-font-size: 18px;
   --content-text-color: #F1B2CE;
   --title-text-color: #000028;
@@ -25,6 +26,11 @@
 
 .theme-dark .page {
   /* Вам также нужно будет написать ряд подобных селекторов */
+}
+
+.theme-dark .accent-theme-dark,
+.theme-dark .accent-theme-dark::after {
+ display: flex;
 }
 
 @media (width >= 750px) {
