--- a/styles/variables.css
+++ b/styles/variables.css
@@ -8,7 +8,8 @@
   --font-weight-regular: 400;
   --bg-image: url(../images/cover-image-dark.png);
   --bg-color: #000028;
-  --accent-color: #ff0070;
+  --accent-text-color: #ff0070;
+  --accent-bg-color: #ff0070;
   --content-font-size: 18px;
   --content-text-color: #F1B2CE;
   --title-text-color: #000028;
