--- a/styles/style.css
+++ b/styles/style.css
@@ -18,6 +18,7 @@
   gap: 13px;
   text-transform: uppercase;
   line-height: 25px;
+  font-size: var(--content-font-size);
 }
 
 .accent-theme-dark::after {
@@ -51,7 +52,6 @@
   height: 25px;
   border-bottom: 1px solid var(--accent-text-color);
   border-left: 1px solid var(--accent-text-color);
-  /*align-self: flex-end;*/
 }
 
 .header__theme-menu {
@@ -91,6 +91,7 @@
 
 .header__theme-menu-item:has(.header__theme-menu-button_active) {
   border: 1px solid var(--accent-text-color);
+  pointer-events: none;
 }
 
 .header__title {
@@ -127,7 +128,7 @@
   gap: 20px;
 }
 
-.section-right {
+.section-article {
   display: flex;
   flex-direction: column;
   gap: 20px;
@@ -276,12 +277,6 @@ a:focus {
     grid-template-columns: 1fr 2fr;
   }
 
-  .content__section-why .content__section-title {
-    
-    /*grid-row-start: 1;
-    grid-row-end: 3;*/
-  }
-
   .content__section-what .content__section-title {
     grid-column-start: 1;
     grid-column-end: auto;
@@ -293,7 +288,6 @@ a:focus {
   }
 
   .content__section-how .content__section-title {
-    /*grid-row: 1 / 7;*/
     column-gap: 20px;
   }
 
@@ -361,13 +355,14 @@ a:focus {
     grid-template-columns: repeat(3, 315px);
     grid-template-rows: min-content;
     align-items: flex-start;
-    justify-content: space-evenly;
+    justify-content: center;
   }
 
   .content__section-what .content__section-title {
     grid-row: 1;
     grid-column: 1 / -1;
-    width: 315px;
+    width: 100%;
+    max-width: 315px;
   }
 
   .content__section-what .article {
